--- a/index.html
+++ b/index.html
@@ -5,26 +5,21 @@
 <meta charset="utf-8">
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">안녕!</a></h1>
 <h2>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+  <li><a href="1.html">이건희</a></li>
+  <li><a href="2.html">조창환</a></li>
+  <li><a href="3.html">오광진</a></li>
 </ol>
 </h2>
-<h1>코딩을 시작 하시나요?</h1>
-  코딩을 시작하셨나요? 기대되는 마음으로 시작하셨을 것 같네요.<br>
-  하지만 고생은 지금부터, 포기하지 마세요 절대로!
-<img src="main.jpg" width="600" height="300">
+<h1>창환이랑 건희꺼</h1>
+<img src="pic1.jpg" width="450">
 <p style="margin-top:50px;"></p>
 
+<h4>이건 이건희 동영상 아무거나
 <p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE"
-title="YouTube video player"
-frameborder="0"
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lywgn8UIWb8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </P>
 
 </body>
