--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lywgn8UIWb8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </P>
-<!--Start of Tawk.to Script-->
+<p>!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
@@ -33,6 +33,6 @@ s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
-<!--End of Tawk.to Script-->
+</p><!--End of Tawk.to Script-->
 </body>
 </html>
