--- a/1.html
+++ b/1.html
@@ -8,15 +8,15 @@
   <h1><a href="index.html">메인으로</a></h1>
 <h2>
 <ol>
-  <li><a href="1.html">이건희</a></li>
-  <li><a href="2.html">조창환</a></li>
-  <li><a href="3.html">오광진</a></li>
+  <li><a href="1.html">조창환은 누구?</a></li>
+  <li><a href="2.html">TEST2</a></li>
+  <li><a href="3.html">TEST3</a></li>
 </ol>
 </h2>
-<h1>이건희</h1>
-<img src="lee1.jpg" width="450>
+<h1>나는...</h1>
+<img src="labtop1.jpg" width="450>
 <p style="margin-top:50px;">
-  
+
 <p>
   <div id="disqus_thread"></div>
   <script>
