--- a/2.html
+++ b/2.html
@@ -8,13 +8,13 @@
   <h1><a href="index.html">메인으로</a></h1>
 <h2>
 <ol>
-  <li><a href="1.html">이건희</a></li>
-  <li><a href="2.html">조창환</a></li>
-  <li><a href="3.html">오광진</a></li>
+  <li><a href="1.html">조창환은 누구?</a></li>
+  <li><a href="2.html">TEST2</a></li>
+  <li><a href="3.html">TEST3</a></li>
 </ol>
 </h2>
 <h1>조창환</h1>
-<img src="hwan1.jpg" width="400">
+<img src="other.jpg" width="400">
 
   <div id="disqus_thread"></div>
   <script>
