--- a/3.html
+++ b/3.html
@@ -8,9 +8,9 @@
   <h1><a href="index.html">메인으로</a></h1>
 <h2>
 <ol>
-  <li><a href="1.html">이건희</a></li>
-  <li><a href="2.html">조창환</a></li>
-  <li><a href="3.html">오광진</a></li>
+  <li><a href="1.html">조창환은 누구?</a></li>
+  <li><a href="2.html">TEST2</a></li>
+  <li><a href="3.html">TEST3</a></li>
 </ol>
 </h2>
 <h1>오광진</h1>
